Added links to footer

--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     <h1>Welcome to my Weather 2.0 App!</h1>
 
     <footer>
-      This project was coded by <a href="">Kristene Griffis</a> and is
-      open-sourced on <a href="">GitHub</a> and hosted on <a href="">Netlify</a>
+      This project was coded by
+      <a href="https://github.com/kgriffi876?tab=repositories"
+        >Kristene Griffis</a
+      >
+      and is open-sourced on
+      <a href="https://github.com/kgriffi876/weather-app-2.0">GitHub</a> and
+      hosted on
+      <a href="https://sweet-sorbet-weatherapp.netlify.app/">Netlify</a>
     </footer>
   </body>
 </html>
