Added basic html for weather app

--- a/index.html
+++ b/index.html
@@ -3,11 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sweet Sorbet Weather App</title>
   </head>
   <body>
-    <h1>Welcome to my Weather 2.0 App!</h1>
+    <header>
+      <h1>Sweet Sorbet Weather App</h1>
 
+      <form action="">
+        <input type="text" placeholder="Enter a city" id="" />
+        <input type="button" value="Search" />
+      </form>
+    </header>
+    <br />
+    <main>
+      <div>⛅</div>
+      <div>
+        Toronto <br />
+        7&deg;C
+      </div>
+      <br />
+      <div>Humidity <br />37%</div>
+
+      <div>Wind Speed <br />19 km/h</div>
+      <br />
+      <div>Tuesday <br />-4&deg;C</div>
+      <div>Wednesday <br />-4&deg;C</div>
+      <div>Thursday <br />-4&deg;C</div>
+      <div>Friday <br />-4&deg;C</div>
+      <div>Saturday <br />-4&deg;C</div>
+      <div>Sunday <br />-4&deg;C</div>
+    </main>
+    <br />
     <footer>
       This project was coded by
       <a href="https://github.com/kgriffi876?tab=repositories"
