More css changes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
           <div class="city-temperature">
             <span class="city">Toronto</span> <br />
             <span class="current-temperature">7&deg;C</span>
+            <div class="current-date">
+              <span class="current-day">Monday</span>
+              <span class="current-time">10:00:00</span>
+            </div>
           </div>
         </div>
         <br />
