Created index.js and linked to html

--- a/index.html
+++ b/index.html
@@ -85,5 +85,6 @@
         <a href="https://sweet-sorbet-weatherapp.netlify.app/">Netlify</a>
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
