--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
       <header>
         <h1>Sweet Sorbet Weather App</h1>
 
-        <form action="">
-          <input type="text" placeholder="Enter a city" class="search-city" />
+        <form action="" id="search-form">
+          <input
+            type="text"
+            placeholder="Enter a city"
+            class="search-city"
+            id="search-city"
+          />
           <input type="button" value="Search" class="search-button" />
         </form>
       </header>
@@ -23,7 +28,7 @@
         <div class="current-weather">
           <div class="weather-icon">⛅</div>
           <div class="city-temperature">
-            <span class="city">Toronto</span> <br />
+            <span class="city" id="current-city">Toronto</span> <br />
             <span class="current-temperature">7&deg;C</span>
             <div class="current-date">
               <span class="current-day">Monday</span>
