--- a/index.html
+++ b/index.html
@@ -33,53 +33,22 @@
       <main>
         <div class="current-weather">
           <div class="weather-icon">⛅</div>
+
           <div class="city-temperature">
-            <span class="city" id="current-city"></span> <br />
-            <span class="current-temperature" id="temperature">&deg;C</span>
+            <span id="current-city">Toronto</span> <br />
+            <span id="temperature">7&deg;C</span>
             <div class="current-date">
               <span class="current-day">Monday</span>
               <span class="current-time">10:00:00</span>
             </div>
           </div>
         </div>
+
         <br />
         <div class="current-conditions">
           <div>Humidity <br /><span class="humidity">37%</span></div>
 
           <div>Wind Speed <br /><span class="wind-speed">19 km/h</span></div>
-        </div>
-        <br />
-        <div class="day-container">
-          <div>
-            <span class="day-2">Tuesday</span> <br /><span class="day-2-temp"
-              >-4&deg;C</span
-            >
-          </div>
-          <div>
-            <span class="day-3">Wednesday</span> <br /><span class="day-3-temp"
-              >-4&deg;C</span
-            >
-          </div>
-          <div>
-            <span class="day-4">Thursday</span> <br /><span class="day-4-temp"
-              >-4&deg;C</span
-            >
-          </div>
-          <div>
-            <span class="day-5">Friday</span> <br /><span class="day-5-temp"
-              >-4&deg;C</span
-            >
-          </div>
-          <div>
-            <span class="day-6">Saturday</span> <br /><span class="day-6-temp"
-              >-4&deg;C</span
-            >
-          </div>
-          <div>
-            <span class="day-7">Sunday</span> <br /><span class="day-7-temp"
-              >-4&deg;C</span
-            >
-          </div>
         </div>
       </main>
       <br />
