--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
-    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <title>Sweet Sorbet Weather App</title>
   </head>
   <body>
@@ -16,8 +16,9 @@
           <input
             type="search"
             placeholder="Enter a city"
+            required
             class="search-city"
-            id="search-city"
+            id="search-form-input"
           />
           <input
             type="button"
@@ -35,8 +36,8 @@
           <div class="weather-icon">⛅</div>
 
           <div class="city-temperature">
-            <span id="current-city">Toronto</span> <br />
-            <span id="temperature">7&deg;C</span>
+            <span id="city"></span> <br />
+            <span id="temperature"></span>&deg;C
             <div class="current-date">
               <span class="current-day">Monday</span>
               <span class="current-time">10:00:00</span>
