revisions to index.html

--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
         <div class="current-weather">
           <div class="weather-icon">⛅</div>
 
-          <div class="city-temperature">
-            <span id="city"></span> <br />
-            <span id="temperature"></span>&deg;C
+          <div>
+            <span id="city" class="city-temperature"></span> <br />
+            <span id="temperature" class="city-temperature"></span
+            ><span class="city-temperature">&deg;C</span> <br />
+            <br />
             <div class="current-date">
-              <span class="current-day">Monday</span>
-              <span class="current-time">10:00:00</span>
+              <span>Monday</span>
+              <span>10:00:00</span><br />
+              <span>scattered clouds</span>
             </div>
           </div>
         </div>
