Updated weather data

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
             ><span class="city-temperature">&deg;C</span> <br />
             <br />
             <div class="current-date">
-              <span>Monday</span>
-              <span>10:00:00</span><br />
-              <span>scattered clouds</span>
+              <span id="dateTime"></span>
+              <br />
+              <span id="description"></span>
             </div>
           </div>
         </div>
 
         <br />
         <div class="current-conditions">
-          <div>Humidity <br /><span class="humidity">37%</span></div>
+          <div>Humidity <br /><span id="humidity"></span></div>
 
-          <div>Wind Speed <br /><span class="wind-speed">19 km/h</span></div>
+          <div>Wind Speed <br /><span id="windSpeed"></span></div>
         </div>
       </main>
       <br />
