Added weather icon data and updated css

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <br />
       <main>
         <div class="current-weather">
-          <div class="weather-icon">⛅</div>
+          <div id="icon"></div>
 
-          <div>
+          <div class="city-information">
             <span id="city" class="city-temperature"></span> <br />
             <span id="temperature" class="city-temperature"></span
             ><span class="city-temperature">&deg;C</span> <br />
