--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <hr />
       <br />
       <main>
-        <div class="current-weather">
-          <div id="icon"></div>
+        <div class="city-weather">
+          <div id="city" class="city-temperature"></div>
 
           <div class="city-information">
-            <span id="city" class="city-temperature"></span> <br />
+            <span id="icon"></span>
             <span id="temperature" class="city-temperature"></span
             ><span class="city-temperature">&deg;C</span> <br />
             <br />
